@@ -14,6 +14,7 @@ import org.elasticsearch.common.xcontent.XContentType;
 import org.elasticsearch.common.xcontent.json.JsonXContent;
 import org.elasticsearch.index.mapper.BooleanFieldMapper;
 import org.elasticsearch.index.mapper.DateFieldMapper;
+import org.elasticsearch.index.mapper.GeoPointFieldMapper;
 import org.elasticsearch.index.mapper.IpFieldMapper;
 import org.elasticsearch.index.mapper.KeywordFieldMapper;
 import org.elasticsearch.index.mapper.NumberFieldMapper.NumberType;
@@ -30,10 +31,8 @@ import org.elasticsearch.test.rest.yaml.section.SetupSection;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -76,29 +75,24 @@ public abstract class CoreTestTranslater {
 
     protected abstract Suite suite(ClientYamlTestCandidate candidate);
 
-    private static final Set<String> RUNTIME_TYPES = new HashSet<>(
-        Arrays.asList(
-            BooleanFieldMapper.CONTENT_TYPE,
-            DateFieldMapper.CONTENT_TYPE,
-            NumberType.DOUBLE.typeName(),
-            KeywordFieldMapper.CONTENT_TYPE,
-            IpFieldMapper.CONTENT_TYPE,
-            NumberType.LONG.typeName()
-        )
+    private static final Set<String> RUNTIME_TYPES = org.elasticsearch.common.collect.Set.of(
+        BooleanFieldMapper.CONTENT_TYPE,
+        DateFieldMapper.CONTENT_TYPE,
+        NumberType.DOUBLE.typeName(),
+        KeywordFieldMapper.CONTENT_TYPE,
+        IpFieldMapper.CONTENT_TYPE,
+        GeoPointFieldMapper.CONTENT_TYPE,
+        NumberType.LONG.typeName()
     );
 
-    protected abstract Map<String, Object> dynamicTemplateFor(String type);
+    protected abstract Map<String, Object> dynamicTemplateFor();
 
-    protected static Map<String, Object> dynamicTemplateToDisableRuntimeCompatibleFields(String type) {
-        return org.elasticsearch.common.collect.Map.of("type", type, "index", false, "doc_values", false);
+    protected static Map<String, Object> dynamicTemplateToDisableRuntimeCompatibleFields() {
+        return Collections.singletonMap("mapping", org.elasticsearch.common.collect.Map.of("index", false, "doc_values", false));
     }
 
-    // TODO there isn't yet a way to create fields in the runtime section from a dynamic template
-    protected static Map<String, Object> dynamicTemplateToAddRuntimeFields(String type) {
-        return org.elasticsearch.common.collect.Map.ofEntries(
-            org.elasticsearch.common.collect.Map.entry("type", "runtime"),
-            org.elasticsearch.common.collect.Map.entry("runtime_type", type)
-        );
+    protected static Map<String, Object> dynamicTemplateToAddRuntimeFields() {
+        return Collections.singletonMap("runtime", Collections.emptyMap());
     }
 
     protected static Map<String, Object> runtimeFieldLoadingFromSource(String type) {
@@ -117,39 +111,23 @@ public abstract class CoreTestTranslater {
                 Map<String, String> params = org.elasticsearch.common.collect.Map.of("name", "hack_dynamic_mappings", "create", "true");
                 List<Map<String, Object>> dynamicTemplates = new ArrayList<>();
                 for (String type : RUNTIME_TYPES) {
-                    if (type.equals("ip")) {
-                        // There isn't a dynamic template to pick up ips. They'll just look like strings.
+                    /*
+                     * It would be great to use dynamic:runtime rather than dynamic templates.
+                     * Unfortunately, string gets dynamically mapped as a multi-field (text + keyword) which we can't mimic as
+                     * runtime fields don't support text, and from a dynamic template a field can either be runtime or concrete.
+                     * We would like to define a keyword sub-field under runtime and leave the main field under properties but that
+                     * is not possible. What we do for now is skip strings: we register a dynamic template for each type besides string.
+                     * Ip and geo_point fields never get dynamically mapped so they'll just look like strings.
+                     */
+                    if (type.equals(IpFieldMapper.CONTENT_TYPE)
+                        || type.equals(GeoPointFieldMapper.CONTENT_TYPE)
+                        || type.equals(KeywordFieldMapper.CONTENT_TYPE)) {
                         continue;
                     }
-                    Map<String, Object> mapping = dynamicTemplateFor(type);
-                    if (type.equals("keyword")) {
-                        /*
-                         * For "string"-type dynamic mappings emulate our default
-                         * behavior with a top level text field and a `.keyword`
-                         * multi-field. In our case we disable the keyword field
-                         * and substitute it with an enabled one on the search
-                         * request.
-                         */
-                        mapping = org.elasticsearch.common.collect.Map.of(
-                            "type",
-                            "text",
-                            "fields",
-                            org.elasticsearch.common.collect.Map.of("keyword", mapping)
-                        );
-                        dynamicTemplates.add(
-                            org.elasticsearch.common.collect.Map.of(
-                                type,
-                                org.elasticsearch.common.collect.Map.of("match_mapping_type", "string", "mapping", mapping)
-                            )
-                        );
-                    } else {
-                        dynamicTemplates.add(
-                            org.elasticsearch.common.collect.Map.of(
-                                type,
-                                org.elasticsearch.common.collect.Map.of("match_mapping_type", type, "mapping", mapping)
-                            )
-                        );
-                    }
+                    HashMap<String, Object> map = new HashMap<>();
+                    map.put("match_mapping_type", type);
+                    map.putAll(dynamicTemplateFor());
+                    dynamicTemplates.add(org.elasticsearch.common.collect.Map.of(type, map));
                 }
                 Map<String, Object> indexTemplate = org.elasticsearch.common.collect.Map.of(
                     "settings",
